# proponente-platform

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release-desktop.yml
apps/api/: .gitignore  LICENSE  README.md  biome.json  docker-compose.yml  drizzle.config.ts  package.json  tsconfig.base.json  tsconfig.build.json
apps/api/drizzle/20260629012804_true_madame_masque/: snapshot.json
apps/api/src/: app.ts
apps/api/src/db/: client.ts
apps/api/src/shared/: auth.ts  env.ts  format.ts
apps/desktop/: .gitignore  README.md  biome.json  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: index.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppSidebar.tsx  (+3 more)
apps/web/: index.html  package.json  tsconfig.json  tsconfig.node.json
apps/web/src/: styles.css
captaflow-api/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
captaflow-api/.postman/: resources.yaml
captaflow-api/drizzle/20260629012804_true_madame_masque/: migration.sql  snapshot.json
captaflow-api/src/: app.ts
captaflow-api/src/shared/: auth.ts  env.ts
captaflow-desktop/: package.json  pnpm-lock.yaml
captaflow-desktop/src/: App.tsx
captaflow-desktop/src-tauri/: Cargo.toml  tauri.conf.json
captaflow-desktop/src-tauri/src/: main.rs
captaflow-desktop/src/lib/: auth-client.ts
(+32 files in other folders)
